<resources>
    <string name="app_name">VarAppmiento</string>
    <string name="action_sign_up">Registrase</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_phoneNumber">Numero de Telefono</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirma el Password</string>
    <string name="action_sign_in_short">Password</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="nombre_invalido">El nombre no es valido</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="telefono_invalido">Error en el telefono</string>
    <string name="error_invalid_password">Password invalido</string>
    <string name="error_password_no_coincide">El password no coincide</string>
    <string name="prompt_current_password">Password actual</string>
    <string name="prompt_new_password">Nuevo password</string>
    <string name="prompt_new_password_confirm">Confirma el nuevo password</string>
    <string name="action_update_informante">Actualizar datos</string>
    <string name="error_error_password">Password incorrecto</string>
    <string name="synchronize">Sincronizar</string>
    <string name="ir_menu">Ir al inicio</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnAnterior">Anterior</string>
    <string name="reporte_title">Datos del reporte </string>
    <string name="navigation_drawer_open">Abriendo...</string>
    <string name="navigationic_drawer_drawer_close">Cerrando...</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_version">0.1</string>
    <string name="app_date">26 de Septiembre de 2016</string>
    <string name="app_copyright">Universidad Veracruzana</string>
    <string name="app_description">VarAppmiento es una aplicación especializada en el reporte de varamiento de mamíferos marinos para la República Mexicana</string>
    <string name="app_contact">Contacto: varappmiento@gmail.com</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
